# agent-skills

./: .gitignore  README.md  mcp.json  pyproject.toml  setup.sh
.cursor/skills/x-brain-workspace-orientation/: SKILL.md
.cursor/skills/x-compact-markdown-file/: SKILL.md
.cursor/skills/x-convert-pdf-to-markdown/: SKILL.md
.cursor/skills/x-daily-briefing/: SKILL.md
.cursor/skills/x-deep-research/: .gitignore  SKILL.md
.cursor/skills/x-deep-research/prompts/: base.md  company.md  person.md  product.md
.cursor/skills/x-linear-issues/: SKILL.md
.cursor/skills/x-meeting-reports/: SKILL.md
.cursor/skills/x-notion-mcp/: SKILL.md
.cursor/skills/x-product-deep-research/: SKILL.md
.cursor/skills/x-talk-to-figma-mcp/: SKILL.md
.cursor/skills/x-update-daily-tasks/: SKILL.md
.cursor/skills/x-youtube-analyzer/: SKILL.md
.cursor/skills/x-youtube-analyzer/prompts/: analyze.md
scripts/: daily_briefing.py  deep_research.py  notion_create_meeting_report.py  youtube_analyzer.py
