[tool.poetry]
name = "agent-tools"
version = "0.1.0"
description = "Python tools for AI agent workflows"
authors = ["Tim"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
marker-pdf = ">=1.10.1,<2.0.0"
pymupdf = ">=1.26.7,<2.0.0"
openai = ">=1.0.0,<2.0.0"
google-genai = ">=1.0.0,<2.0.0"
yt-dlp = ">=2024.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
